# character-encoding-utils

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml  test.yml
src/character_encoding_utils/: big5.py  gb2312.py  ksx1001.py  shiftjis.py
tests/: test_big5.py  test_gb2312.py  test_ksx1001.py  test_shiftjis.py
