[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "character-encoding-utils"
version = "0.0.7"
description = "Some character encoding utils."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["encoding", "gb2312", "big5", "shift-jis", "ksx1001"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/TakWolf/character-encoding-utils"
source = "https://github.com/TakWolf/character-encoding-utils"
issues = "https://github.com/TakWolf/character-encoding-utils/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
