[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "character-encoding-utils"
version = "0.0.11"
description = "Some character encoding utils"
readme = "README.md"
license = "MIT"
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["encoding", "gb2312", "big5", "shift-jis", "ksx1001"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/TakWolf/character-encoding-utils"
Source = "https://github.com/TakWolf/character-encoding-utils"
Issues = "https://github.com/TakWolf/character-encoding-utils/issues"
